parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMA
    DO
    ELSE
    IF
    LENGHT
    MAIN
    MAYORDER
    MAYORIZQ
    MINUSMINUS
    NUMERAL
    PUBLIC
    STATIC
    VOID
    WHILE

Grammar

Rule 0     S' -> declaracion
Rule 1     declaracion -> IDENTIFICADOR ASIGNAR expresion PUNTOCOMA
Rule 2     declaracion -> expresion
Rule 3     expresion -> expresion SUMA expresion
Rule 4     expresion -> expresion RESTA expresion
Rule 5     expresion -> expresion MULT expresion
Rule 6     expresion -> expresion DIV expresion
Rule 7     expresion -> expresion POTENCIA expresion
Rule 8     expresion -> expresion MODULO expresion
Rule 9     expresion -> RESTA expresion
Rule 10    expresion -> PARIZQ expresion PARDER
Rule 11    expresion -> LLAIZQ expresion LLADER
Rule 12    expresion -> CORIZQ expresion CORDER
Rule 13    expresion -> expresion MENORQUE expresion
Rule 14    expresion -> expresion MAYORQUE expresion
Rule 15    expresion -> expresion MENORIGUAL expresion
Rule 16    expresion -> expresion MAYORIGUAL expresion
Rule 17    expresion -> expresion IGUAL expresion
Rule 18    expresion -> expresion DISTINTO expresion
Rule 19    expresion -> PARIZQ expresion PARDER MENORQUE PARIZQ expresion PARDER
Rule 20    expresion -> PARIZQ expresion PARDER MAYORQUE PARIZQ expresion PARDER
Rule 21    expresion -> PARIZQ expresion PARDER MENORIGUAL PARIZQ expresion PARDER
Rule 22    expresion -> PARIZQ expresion PARDER MAYORIGUAL PARIZQ expresion PARDER
Rule 23    expresion -> PARIZQ expresion PARDER IGUAL PARIZQ expresion PARDER
Rule 24    expresion -> PARIZQ expresion PARDER DISTINTO PARIZQ expresion PARDER
Rule 25    expresion -> expresion AND expresion
Rule 26    expresion -> expresion OR expresion
Rule 27    expresion -> expresion NOT expresion
Rule 28    expresion -> PARIZQ expresion AND expresion PARDER
Rule 29    expresion -> PARIZQ expresion OR expresion PARDER
Rule 30    expresion -> PARIZQ expresion NOT expresion PARDER
Rule 31    expresion -> ENTERO
Rule 32    expresion -> COMDOB expresion COMDOB
Rule 33    expresion -> IDENTIFICADOR
Rule 34    declaracion -> FOR PARIZQ IDENTIFICADOR ASIGNAR expresion PUNTOCOMA expresion MENORIGUAL expresion PUNTOCOMA expresion PLUSPLUS PARDER LLAIZQ imprimir LLADER
Rule 35    declaracion -> FOR PARIZQ IDENTIFICADOR ASIGNAR expresion PUNTOCOMA expresion MENORIGUAL expresion PUNTOCOMA expresion PLUSPLUS PARDER LLAIZQ SYSTEM PUNTO OUT PUNTO PRINTLN PARIZQ CADENA PARDER PUNTOCOMA LLADER
Rule 36    imprimir -> SYSTEM PUNTO OUT PUNTO PRINTLN PARIZQ CADENA PARDER PUNTOCOMA
Rule 37    imprimir -> SYSTEM PUNTO OUT PUNTO PRINTLN PARIZQ CADENA SUMA ENTERO PARDER PUNTOCOMA

Terminals, with rules where they appear

AND                  : 25 28
ASIGNAR              : 1 34 35
CADENA               : 35 36 37
COMA                 : 
COMDOB               : 32 32
CORDER               : 12
CORIZQ               : 12
DISTINTO             : 18 24
DIV                  : 6
DO                   : 
ELSE                 : 
ENTERO               : 31 37
FOR                  : 34 35
IDENTIFICADOR        : 1 33 34 35
IF                   : 
IGUAL                : 17 23
LENGHT               : 
LLADER               : 11 34 35
LLAIZQ               : 11 34 35
MAIN                 : 
MAYORDER             : 
MAYORIGUAL           : 16 22
MAYORIZQ             : 
MAYORQUE             : 14 20
MENORIGUAL           : 15 21 34 35
MENORQUE             : 13 19
MINUSMINUS           : 
MODULO               : 8
MULT                 : 5
NOT                  : 27 30
NUMERAL              : 
OR                   : 26 29
OUT                  : 35 36 37
PARDER               : 10 19 19 20 20 21 21 22 22 23 23 24 24 28 29 30 34 35 35 36 37
PARIZQ               : 10 19 19 20 20 21 21 22 22 23 23 24 24 28 29 30 34 35 35 36 37
PLUSPLUS             : 34 35
POTENCIA             : 7
PRINTLN              : 35 36 37
PUBLIC               : 
PUNTO                : 35 35 36 36 37 37
PUNTOCOMA            : 1 34 34 35 35 35 36 37
RESTA                : 4 9
STATIC               : 
SUMA                 : 3 37
SYSTEM               : 35 36 37
VOID                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

declaracion          : 0
expresion            : 1 2 3 3 4 4 5 5 6 6 7 7 8 8 9 10 11 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 32 34 34 34 34 35 35 35 35
imprimir             : 34

Parsing method: LALR

state 0

    (0) S' -> . declaracion
    (1) declaracion -> . IDENTIFICADOR ASIGNAR expresion PUNTOCOMA
    (2) declaracion -> . expresion
    (34) declaracion -> . FOR PARIZQ IDENTIFICADOR ASIGNAR expresion PUNTOCOMA expresion MENORIGUAL expresion PUNTOCOMA expresion PLUSPLUS PARDER LLAIZQ imprimir LLADER
    (35) declaracion -> . FOR PARIZQ IDENTIFICADOR ASIGNAR expresion PUNTOCOMA expresion MENORIGUAL expresion PUNTOCOMA expresion PLUSPLUS PARDER LLAIZQ SYSTEM PUNTO OUT PUNTO PRINTLN PARIZQ CADENA PARDER PUNTOCOMA LLADER
    (3) expresion -> . expresion SUMA expresion
    (4) expresion -> . expresion RESTA expresion
    (5) expresion -> . expresion MULT expresion
    (6) expresion -> . expresion DIV expresion
    (7) expresion -> . expresion POTENCIA expresion
    (8) expresion -> . expresion MODULO expresion
    (9) expresion -> . RESTA expresion
    (10) expresion -> . PARIZQ expresion PARDER
    (11) expresion -> . LLAIZQ expresion LLADER
    (12) expresion -> . CORIZQ expresion CORDER
    (13) expresion -> . expresion MENORQUE expresion
    (14) expresion -> . expresion MAYORQUE expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion MAYORIGUAL expresion
    (17) expresion -> . expresion IGUAL expresion
    (18) expresion -> . expresion DISTINTO expresion
    (19) expresion -> . PARIZQ expresion PARDER MENORQUE PARIZQ expresion PARDER
    (20) expresion -> . PARIZQ expresion PARDER MAYORQUE PARIZQ expresion PARDER
    (21) expresion -> . PARIZQ expresion PARDER MENORIGUAL PARIZQ expresion PARDER
    (22) expresion -> . PARIZQ expresion PARDER MAYORIGUAL PARIZQ expresion PARDER
    (23) expresion -> . PARIZQ expresion PARDER IGUAL PARIZQ expresion PARDER
    (24) expresion -> . PARIZQ expresion PARDER DISTINTO PARIZQ expresion PARDER
    (25) expresion -> . expresion AND expresion
    (26) expresion -> . expresion OR expresion
    (27) expresion -> . expresion NOT expresion
    (28) expresion -> . PARIZQ expresion AND expresion PARDER
    (29) expresion -> . PARIZQ expresion OR expresion PARDER
    (30) expresion -> . PARIZQ expresion NOT expresion PARDER
    (31) expresion -> . ENTERO
    (32) expresion -> . COMDOB expresion COMDOB
    (33) expresion -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 2
    FOR             shift and go to state 4
    RESTA           shift and go to state 7
    PARIZQ          shift and go to state 5
    LLAIZQ          shift and go to state 6
    CORIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    COMDOB          shift and go to state 10

    declaracion                    shift and go to state 1
    expresion                      shift and go to state 3

state 1

    (0) S' -> declaracion .



state 2

    (1) declaracion -> IDENTIFICADOR . ASIGNAR expresion PUNTOCOMA
    (33) expresion -> IDENTIFICADOR .

    ASIGNAR         shift and go to state 11
    SUMA            reduce using rule 33 (expresion -> IDENTIFICADOR .)
    RESTA           reduce using rule 33 (expresion -> IDENTIFICADOR .)
    MULT            reduce using rule 33 (expresion -> IDENTIFICADOR .)
    DIV             reduce using rule 33 (expresion -> IDENTIFICADOR .)
    POTENCIA        reduce using rule 33 (expresion -> IDENTIFICADOR .)
    MODULO          reduce using rule 33 (expresion -> IDENTIFICADOR .)
    MENORQUE        reduce using rule 33 (expresion -> IDENTIFICADOR .)
    MAYORQUE        reduce using rule 33 (expresion -> IDENTIFICADOR .)
    MENORIGUAL      reduce using rule 33 (expresion -> IDENTIFICADOR .)
    MAYORIGUAL      reduce using rule 33 (expresion -> IDENTIFICADOR .)
    IGUAL           reduce using rule 33 (expresion -> IDENTIFICADOR .)
    DISTINTO        reduce using rule 33 (expresion -> IDENTIFICADOR .)
    AND             reduce using rule 33 (expresion -> IDENTIFICADOR .)
    OR              reduce using rule 33 (expresion -> IDENTIFICADOR .)
    NOT             reduce using rule 33 (expresion -> IDENTIFICADOR .)
    $end            reduce using rule 33 (expresion -> IDENTIFICADOR .)


state 3

    (2) declaracion -> expresion .
    (3) expresion -> expresion . SUMA expresion
    (4) expresion -> expresion . RESTA expresion
    (5) expresion -> expresion . MULT expresion
    (6) expresion -> expresion . DIV expresion
    (7) expresion -> expresion . POTENCIA expresion
    (8) expresion -> expresion . MODULO expresion
    (13) expresion -> expresion . MENORQUE expresion
    (14) expresion -> expresion . MAYORQUE expresion
    (15) expresion -> expresion . MENORIGUAL expresion
    (16) expresion -> expresion . MAYORIGUAL expresion
    (17) expresion -> expresion . IGUAL expresion
    (18) expresion -> expresion . DISTINTO expresion
    (25) expresion -> expresion . AND expresion
    (26) expresion -> expresion . OR expresion
    (27) expresion -> expresion . NOT expresion

    $end            reduce using rule 2 (declaracion -> expresion .)
    SUMA            shift and go to state 12
    RESTA           shift and go to state 13
    MULT            shift and go to state 14
    DIV             shift and go to state 15
    POTENCIA        shift and go to state 16
    MODULO          shift and go to state 17
    MENORQUE        shift and go to state 18
    MAYORQUE        shift and go to state 19
    MENORIGUAL      shift and go to state 20
    MAYORIGUAL      shift and go to state 21
    IGUAL           shift and go to state 22
    DISTINTO        shift and go to state 23
    AND             shift and go to state 24
    OR              shift and go to state 25
    NOT             shift and go to state 26


state 4

    (34) declaracion -> FOR . PARIZQ IDENTIFICADOR ASIGNAR expresion PUNTOCOMA expresion MENORIGUAL expresion PUNTOCOMA expresion PLUSPLUS PARDER LLAIZQ imprimir LLADER
    (35) declaracion -> FOR . PARIZQ IDENTIFICADOR ASIGNAR expresion PUNTOCOMA expresion MENORIGUAL expresion PUNTOCOMA expresion PLUSPLUS PARDER LLAIZQ SYSTEM PUNTO OUT PUNTO PRINTLN PARIZQ CADENA PARDER PUNTOCOMA LLADER

    PARIZQ          shift and go to state 27


state 5

    (10) expresion -> PARIZQ . expresion PARDER
    (19) expresion -> PARIZQ . expresion PARDER MENORQUE PARIZQ expresion PARDER
    (20) expresion -> PARIZQ . expresion PARDER MAYORQUE PARIZQ expresion PARDER
    (21) expresion -> PARIZQ . expresion PARDER MENORIGUAL PARIZQ expresion PARDER
    (22) expresion -> PARIZQ . expresion PARDER MAYORIGUAL PARIZQ expresion PARDER
    (23) expresion -> PARIZQ . expresion PARDER IGUAL PARIZQ expresion PARDER
    (24) expresion -> PARIZQ . expresion PARDER DISTINTO PARIZQ expresion PARDER
    (28) expresion -> PARIZQ . expresion AND expresion PARDER
    (29) expresion -> PARIZQ . expresion OR expresion PARDER
    (30) expresion -> PARIZQ . expresion NOT expresion PARDER
    (3) expresion -> . expresion SUMA expresion
    (4) expresion -> . expresion RESTA expresion
    (5) expresion -> . expresion MULT expresion
    (6) expresion -> . expresion DIV expresion
    (7) expresion -> . expresion POTENCIA expresion
    (8) expresion -> . expresion MODULO expresion
    (9) expresion -> . RESTA expresion
    (10) expresion -> . PARIZQ expresion PARDER
    (11) expresion -> . LLAIZQ expresion LLADER
    (12) expresion -> . CORIZQ expresion CORDER
    (13) expresion -> . expresion MENORQUE expresion
    (14) expresion -> . expresion MAYORQUE expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion MAYORIGUAL expresion
    (17) expresion -> . expresion IGUAL expresion
    (18) expresion -> . expresion DISTINTO expresion
    (19) expresion -> . PARIZQ expresion PARDER MENORQUE PARIZQ expresion PARDER
    (20) expresion -> . PARIZQ expresion PARDER MAYORQUE PARIZQ expresion PARDER
    (21) expresion -> . PARIZQ expresion PARDER MENORIGUAL PARIZQ expresion PARDER
    (22) expresion -> . PARIZQ expresion PARDER MAYORIGUAL PARIZQ expresion PARDER
    (23) expresion -> . PARIZQ expresion PARDER IGUAL PARIZQ expresion PARDER
    (24) expresion -> . PARIZQ expresion PARDER DISTINTO PARIZQ expresion PARDER
    (25) expresion -> . expresion AND expresion
    (26) expresion -> . expresion OR expresion
    (27) expresion -> . expresion NOT expresion
    (28) expresion -> . PARIZQ expresion AND expresion PARDER
    (29) expresion -> . PARIZQ expresion OR expresion PARDER
    (30) expresion -> . PARIZQ expresion NOT expresion PARDER
    (31) expresion -> . ENTERO
    (32) expresion -> . COMDOB expresion COMDOB
    (33) expresion -> . IDENTIFICADOR

    RESTA           shift and go to state 7
    PARIZQ          shift and go to state 5
    LLAIZQ          shift and go to state 6
    CORIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    COMDOB          shift and go to state 10
    IDENTIFICADOR   shift and go to state 29

    expresion                      shift and go to state 28

state 6

    (11) expresion -> LLAIZQ . expresion LLADER
    (3) expresion -> . expresion SUMA expresion
    (4) expresion -> . expresion RESTA expresion
    (5) expresion -> . expresion MULT expresion
    (6) expresion -> . expresion DIV expresion
    (7) expresion -> . expresion POTENCIA expresion
    (8) expresion -> . expresion MODULO expresion
    (9) expresion -> . RESTA expresion
    (10) expresion -> . PARIZQ expresion PARDER
    (11) expresion -> . LLAIZQ expresion LLADER
    (12) expresion -> . CORIZQ expresion CORDER
    (13) expresion -> . expresion MENORQUE expresion
    (14) expresion -> . expresion MAYORQUE expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion MAYORIGUAL expresion
    (17) expresion -> . expresion IGUAL expresion
    (18) expresion -> . expresion DISTINTO expresion
    (19) expresion -> . PARIZQ expresion PARDER MENORQUE PARIZQ expresion PARDER
    (20) expresion -> . PARIZQ expresion PARDER MAYORQUE PARIZQ expresion PARDER
    (21) expresion -> . PARIZQ expresion PARDER MENORIGUAL PARIZQ expresion PARDER
    (22) expresion -> . PARIZQ expresion PARDER MAYORIGUAL PARIZQ expresion PARDER
    (23) expresion -> . PARIZQ expresion PARDER IGUAL PARIZQ expresion PARDER
    (24) expresion -> . PARIZQ expresion PARDER DISTINTO PARIZQ expresion PARDER
    (25) expresion -> . expresion AND expresion
    (26) expresion -> . expresion OR expresion
    (27) expresion -> . expresion NOT expresion
    (28) expresion -> . PARIZQ expresion AND expresion PARDER
    (29) expresion -> . PARIZQ expresion OR expresion PARDER
    (30) expresion -> . PARIZQ expresion NOT expresion PARDER
    (31) expresion -> . ENTERO
    (32) expresion -> . COMDOB expresion COMDOB
    (33) expresion -> . IDENTIFICADOR

    RESTA           shift and go to state 7
    PARIZQ          shift and go to state 5
    LLAIZQ          shift and go to state 6
    CORIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    COMDOB          shift and go to state 10
    IDENTIFICADOR   shift and go to state 29

    expresion                      shift and go to state 30

state 7

    (9) expresion -> RESTA . expresion
    (3) expresion -> . expresion SUMA expresion
    (4) expresion -> . expresion RESTA expresion
    (5) expresion -> . expresion MULT expresion
    (6) expresion -> . expresion DIV expresion
    (7) expresion -> . expresion POTENCIA expresion
    (8) expresion -> . expresion MODULO expresion
    (9) expresion -> . RESTA expresion
    (10) expresion -> . PARIZQ expresion PARDER
    (11) expresion -> . LLAIZQ expresion LLADER
    (12) expresion -> . CORIZQ expresion CORDER
    (13) expresion -> . expresion MENORQUE expresion
    (14) expresion -> . expresion MAYORQUE expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion MAYORIGUAL expresion
    (17) expresion -> . expresion IGUAL expresion
    (18) expresion -> . expresion DISTINTO expresion
    (19) expresion -> . PARIZQ expresion PARDER MENORQUE PARIZQ expresion PARDER
    (20) expresion -> . PARIZQ expresion PARDER MAYORQUE PARIZQ expresion PARDER
    (21) expresion -> . PARIZQ expresion PARDER MENORIGUAL PARIZQ expresion PARDER
    (22) expresion -> . PARIZQ expresion PARDER MAYORIGUAL PARIZQ expresion PARDER
    (23) expresion -> . PARIZQ expresion PARDER IGUAL PARIZQ expresion PARDER
    (24) expresion -> . PARIZQ expresion PARDER DISTINTO PARIZQ expresion PARDER
    (25) expresion -> . expresion AND expresion
    (26) expresion -> . expresion OR expresion
    (27) expresion -> . expresion NOT expresion
    (28) expresion -> . PARIZQ expresion AND expresion PARDER
    (29) expresion -> . PARIZQ expresion OR expresion PARDER
    (30) expresion -> . PARIZQ expresion NOT expresion PARDER
    (31) expresion -> . ENTERO
    (32) expresion -> . COMDOB expresion COMDOB
    (33) expresion -> . IDENTIFICADOR

    RESTA           shift and go to state 7
    PARIZQ          shift and go to state 5
    LLAIZQ          shift and go to state 6
    CORIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    COMDOB          shift and go to state 10
    IDENTIFICADOR   shift and go to state 29

    expresion                      shift and go to state 31

state 8

    (12) expresion -> CORIZQ . expresion CORDER
    (3) expresion -> . expresion SUMA expresion
    (4) expresion -> . expresion RESTA expresion
    (5) expresion -> . expresion MULT expresion
    (6) expresion -> . expresion DIV expresion
    (7) expresion -> . expresion POTENCIA expresion
    (8) expresion -> . expresion MODULO expresion
    (9) expresion -> . RESTA expresion
    (10) expresion -> . PARIZQ expresion PARDER
    (11) expresion -> . LLAIZQ expresion LLADER
    (12) expresion -> . CORIZQ expresion CORDER
    (13) expresion -> . expresion MENORQUE expresion
    (14) expresion -> . expresion MAYORQUE expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion MAYORIGUAL expresion
    (17) expresion -> . expresion IGUAL expresion
    (18) expresion -> . expresion DISTINTO expresion
    (19) expresion -> . PARIZQ expresion PARDER MENORQUE PARIZQ expresion PARDER
    (20) expresion -> . PARIZQ expresion PARDER MAYORQUE PARIZQ expresion PARDER
    (21) expresion -> . PARIZQ expresion PARDER MENORIGUAL PARIZQ expresion PARDER
    (22) expresion -> . PARIZQ expresion PARDER MAYORIGUAL PARIZQ expresion PARDER
    (23) expresion -> . PARIZQ expresion PARDER IGUAL PARIZQ expresion PARDER
    (24) expresion -> . PARIZQ expresion PARDER DISTINTO PARIZQ expresion PARDER
    (25) expresion -> . expresion AND expresion
    (26) expresion -> . expresion OR expresion
    (27) expresion -> . expresion NOT expresion
    (28) expresion -> . PARIZQ expresion AND expresion PARDER
    (29) expresion -> . PARIZQ expresion OR expresion PARDER
    (30) expresion -> . PARIZQ expresion NOT expresion PARDER
    (31) expresion -> . ENTERO
    (32) expresion -> . COMDOB expresion COMDOB
    (33) expresion -> . IDENTIFICADOR

    RESTA           shift and go to state 7
    PARIZQ          shift and go to state 5
    LLAIZQ          shift and go to state 6
    CORIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    COMDOB          shift and go to state 10
    IDENTIFICADOR   shift and go to state 29

    expresion                      shift and go to state 32

state 9

    (31) expresion -> ENTERO .

    SUMA            reduce using rule 31 (expresion -> ENTERO .)
    RESTA           reduce using rule 31 (expresion -> ENTERO .)
    MULT            reduce using rule 31 (expresion -> ENTERO .)
    DIV             reduce using rule 31 (expresion -> ENTERO .)
    POTENCIA        reduce using rule 31 (expresion -> ENTERO .)
    MODULO          reduce using rule 31 (expresion -> ENTERO .)
    MENORQUE        reduce using rule 31 (expresion -> ENTERO .)
    MAYORQUE        reduce using rule 31 (expresion -> ENTERO .)
    MENORIGUAL      reduce using rule 31 (expresion -> ENTERO .)
    MAYORIGUAL      reduce using rule 31 (expresion -> ENTERO .)
    IGUAL           reduce using rule 31 (expresion -> ENTERO .)
    DISTINTO        reduce using rule 31 (expresion -> ENTERO .)
    AND             reduce using rule 31 (expresion -> ENTERO .)
    OR              reduce using rule 31 (expresion -> ENTERO .)
    NOT             reduce using rule 31 (expresion -> ENTERO .)
    $end            reduce using rule 31 (expresion -> ENTERO .)
    PARDER          reduce using rule 31 (expresion -> ENTERO .)
    LLADER          reduce using rule 31 (expresion -> ENTERO .)
    CORDER          reduce using rule 31 (expresion -> ENTERO .)
    COMDOB          reduce using rule 31 (expresion -> ENTERO .)
    PUNTOCOMA       reduce using rule 31 (expresion -> ENTERO .)
    PLUSPLUS        reduce using rule 31 (expresion -> ENTERO .)


state 10

    (32) expresion -> COMDOB . expresion COMDOB
    (3) expresion -> . expresion SUMA expresion
    (4) expresion -> . expresion RESTA expresion
    (5) expresion -> . expresion MULT expresion
    (6) expresion -> . expresion DIV expresion
    (7) expresion -> . expresion POTENCIA expresion
    (8) expresion -> . expresion MODULO expresion
    (9) expresion -> . RESTA expresion
    (10) expresion -> . PARIZQ expresion PARDER
    (11) expresion -> . LLAIZQ expresion LLADER
    (12) expresion -> . CORIZQ expresion CORDER
    (13) expresion -> . expresion MENORQUE expresion
    (14) expresion -> . expresion MAYORQUE expresion
    (15) expresion -> . expresion MENORIGUAL expresion
    (16) expresion -> . expresion MAYORIGUAL expresion
    (17) expresion -> . expresion IGUAL expresion
    (18) expresion -> . expresion DISTINTO expresion
    (19) expresion -> . PARIZQ expresion PARDER MENORQUE PARIZQ expresion PARDER
    (20) expresion -> . PARIZQ expresion PARDER MAYORQUE PARIZQ expresion PARDER
    (21) expresion -> . PARIZQ expresion PARDER MENORIGUAL PARIZQ expresion PARDER
    (22) expresion -> . PARIZQ expresion PARDER MAYORIGUAL PARIZQ expresion PARDER
    (23) expresion -> . PARIZQ expresion PARDER IGUAL PARIZQ expresion PARDER
    (24) expresion -> . PARIZQ expresion PARDER DISTINTO PARIZQ expresion PARDER
    (25) expresion -> . expresion AND expresion
    (26) expresion -> . expresion OR expresion
    (27) expresion -> . expresion NOT expresion
    (28) expresion -> . PARIZQ expresion AND expresion PARDER
    (29) expresion -> . PARIZQ expresion OR expresion PARDER
    (30) expresion -> . PARIZQ expresion NOT expresion PARDER
    (31) expresion -> . ENTERO
    (32) expresion -> . COMDOB expresion COMDOB
    (33) expresion -> . IDENTIFICADOR

    RESTA           shift and go to state 7
    PARIZQ          shift and go to state 5
    LLAIZQ          shift and go to state 6
    CORIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    COMDOB          shift and go to state 10
    IDENTIFICADOR   shift and go to state 29

    expresion                      shift and go to state 33

state 11
